<resources>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="login_with_facebook">facebook</string>
    <string name="get_started">Get Started</string>
    <string name="google">Google</string>
    <string name="caption_or">Or</string>
    <string name="email">Email ID</string>
    <string name="error_internet_connection">Please check your Internet Connection</string>
    <string name="error_something_wrong">Something wrong, try again</string>
    <string name="cancel_reason">No cancel reason found</string>
    <string name="message">Message</string>
    <string name="server_error">Server error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="gps_network_not_enabled">GPS is currently off. Please turn it on to detect the location</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="login">Login</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="not_applicable">N/A</string>
    <string name="sign_up"><u>Sign up</u></string>
    <string name="verify_number">Verify Mobile Number</string>
    <string name="otp_has_been_sent">OTP has been sent on your mobile number</string>
    <string name="please_enter_it_below">Please enter it below</string>
    <string name="verify">Verify</string>
    <string name="change_number"><u>Change Number?</u></string>
    <string name="pick_from">Pickup location</string>
    <string name="pick_a_payment_option">Pick a Payment option</string>
    <string name="enter_drop_location">Enter Drop Location</string>
    <string name="please_select_location">Please select location</string>
    <string name="please_select_location_type">Please select location type</string>
    <string name="please_enter_location_type">Please enter location type</string>
    <string name="please_enter_comments">Please enter comment</string>
    <string name="book_now">Book</string>
    <string name="off">Off</string>
    <string name="available">Available</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="no_coupon_available">No Coupons available currently, please check again
        later</string>
    <string name="pay_via_wallet">Set up Payment</string>
    <string name="call_driver">Call Driver</string>
    <string name="cancel_ride">Cancel Ride</string>
    <string name="please_select_vehicle">Please Select Vehicle</string>
    <string name="please_select_the_reasnon_of_cancellation">Please select the reason of cancellation</string>
    <string name="confirm_booking">Confirm</string>
    <string name="submit">Submit</string>
    <string name="wallet_money">Wallet Money</string>
    <string name="cash">Cash</string>
    <string name="debit_credit_card">Debit/Credit Card</string>
    <string name="add_money_to_wallet">Add Money</string>
    <string name="add_money_to_wallet_plus">+ Add Money</string>
    <string name="add_a_credit_card">Add New Card</string>
    <string name="add_a_credit_debit_card">+ Add New Card</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="xxxx_xxxx_xxxx_xxxx">5487 xxxx xxxx xxxx</string>
    <string name="cvv_code">CVV Code</string>
    <string name="mm_yyyy">MM/YYYY</string>
    <string name="_123">123</string>
    <string name="add">ADD</string>
    <string name="save_this_card">Save this card</string>
    <string name="ride_cancellation">Ride Cancellation</string>
    <string name="your_bill">Your Bill</string>
    <string name="write_some_additional_details">Write some additional details</string>
    <string name="how_was_your_ride">Rate your ride with</string>
    <string name="share_details">Share Details</string>
    <string name="share_earn">Share &amp; Earn</string>
    <string name="choose_issue">Choose Issue</string>
    <string name="please_select_reason_for_cancellation">Please select Reason for cancellation</string>
    <string name="atleast_min_words">Please enter atleast {0} words</string>
    <string name="finding_your_ride">Finding your ride</string>
    <string name="login_with_otp">Login with Otp</string>
    <string name="login_with_password">Login with Password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="referral">Referral Code (Optional)</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_phone_number">Please enter your number</string>
    <string name="please_choose_contact">Please choose a contact</string>
    <string name="please_enter_confirm_password">Please enter confirm password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_confirm_password">Confirm Password not match</string>
    <string name="caption_forgot_password">Forgot Password</string>
    <string name="load_money_to_wallet">Load money to wallet</string>
    <string name="it_s_quick_safe_and_secure">It\'s quick safe and secure</string>
    <string name="next">Next</string>
    <string name="add_money_wallet">Add money</string>
    <string name="please_select_or_enter_the_value">Please select or enter the value</string>
    <string name="please_add_money_in_your_wallet">Add money to your wallet first</string>
    <string name="discount">Discount</string>
    <string name="select_city">Select City</string>
    <string name="get">Get</string>
    <string name="code">Code:</string>
    <string name="base_fare">Base Fare</string>
    <string name="additional_time_fare">Additional Time Fare</string>
    <string name="minimum_fare">Minimum Fare</string>
    <string name="vehicle">Vehicle</string>
    <string name="select_category">Select Category</string>
    <string name="additional_km_fare">Additional Km Fare</string>
    <string name="share_yocabs_with_your_friends">Share Afeezo with your friends and Earn free
        Ride or Afeezo Credits</string>
    <string name="referral_code">Referral Code</string>
    <string name="share">Share</string>
    <string name="error_fetching_location">Error in fetching source location</string>
    <string name="please_select_city_first">Please select city first</string>
    <string name="cancellaton_time">Cancellaton Time</string>
    <string name="cancellation_charge">Cancellation Charge</string>
    <string name="noti_channel_default">Primary Channel</string>
    <string name="noti_channel_second">Secondry Channel</string>
    <string name="no_data_found">No data found</string>
    <string name="no_card_found">You didn\'t save any card yet.</string>
    <string name="no_card_found_desc">Click on the "Add new card" to add new card to make payment</string>
    <string name="num_doesnt_exist">Mobile number does not exist</string>
    <string name="invalid_number">Invalid mobile number</string>
    <string name="ride_listing">Your Rides</string>
    <string name="my_profile">My Profile</string>
    <string name="invoice">Invoice</string>
    <string name="payment">Payment</string>
    <string name="bill_details">Bill Details</string>
    <string name="ride_fare">Ride Fare</string>
    <string name="coupon">Coupon</string>
    <string name="tax">Tax</string>
    <string name="sub_total">Sub Total</string>
    <string name="total">Total</string>
    <string name="ride_detail">Ride Detail</string>
    <string name="support">FAQ</string>
    <string name="fares">Fares</string>
    <string name="offers">Offers</string>
    <string name="contact">Contact</string>
    <string name="my_bookings">My Bookings</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="wallet">Wallet</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_rewards">Rewards</string>
    <string name="about_us">About Us</string>
    <string name="termsConditions">Terms &amp; Conditions</string>
    <string name="termsConditions_underline"><u> Terms &amp; Conditions</u></string>
    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="total_balance">Total Balance</string>
    <string name="request_withdrawl">Request Withdrawl</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="withdrawn_amount">Withdrawn Amount</string>
    <string name="bank_name">Bank Name</string>
    <string name="beneficiary_account_holder_name">Beneficiary/Acount Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="ifsc_code_swift_code">IFSC Code/Swift Code</string>
    <string name="bank_address">Bank Address</string>
    <string name="send_request">Send Request</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="gps_permission_deny_msg">Without this permission the app will be unable to
        fetch location. Are you sure you want to deny?</string>
    <string name="please_fill_amount">Amount to be Withdrawn is mandatory.</string>
    <string name="bank_name_mandatory">Bank name is mandatory</string>
    <string name="account_holder_name_mandatory">Beneficiary/Account Holder Name is mandatory</string>
    <string name="ac_no_mandatory">Bank Account Number is mandatory</string>
    <string name="bank_address_mandatory">Bank Address is mandatory</string>
    <string name="ifsc_code_mandatory">IFSC Code is mandatory</string>
    <string name="id">ID:</string>
    <string name="caption_balance">Balance:</string>
    <string name="caption_credit">Credit</string>
    <string name="caption_debit">Debit</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="let_s_make_travel_safer">Let\'s make travel safer</string>
    <string name="let_s_make_search_location_easy">Let\'s make search location easy and less time consuming.</string>
    <string name="alert_your_dear_ones_in_case_of_any_emergency">Alert your dear ones in case of any emergency.</string>
    <string name="add_them_to_your_emergency_contacts">Add them to your emergency contacts.</string>
    <string name="add_your_fav_location">Add your favourite locations and select them while booking cab. </string>
    <string name="you_can_add_up_to_5_contacts">You can add up to 5 contacts</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="my_location">My Locations</string>
    <string name="add_new_address">Add New Location</string>
    <string name="home">Home</string>
    <string name="work">Work</string>
    <string name="other">Others</string>
    <string name="select_location_type">Select Location Type:</string>
    <string name="select_location">Select Location</string>
    <string name="remove_photo">Remove</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="emergency_message">All the emergency contacts listed will get a message that you are in an emergency.</string>
    <string name="reward_points">Rewards</string>
    <string name="saved_places">Saved Places</string>
    <string name="save">Save</string>
    <string name="set_as_fav">Save as Favorite</string>
    <string name="are_you_in_emergency">Are you in an Emergency?</string>
    <string name="swipe_to_alert">Swipe to raise alert</string>
    <string name="app_browse">Gallery</string>
    <string name="app_image">Camera</string>
    <string name="app_select_file">Choose Image</string>
    <string name="change_language">Change Language</string>
    <string name="request_my_data">Request My Data</string>
    <string name="delete_my_account">Delete My Account</string>
</resources>