<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/toolbar_layout"
        android:id="@+id/toolbar_LT"></include>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_below="@+id/toolbar_LT"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtDataLt"
        android:padding="10dp"
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/let_s_make_search_location_easy"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginTop="20dp"
            android:text="@string/alert_your_dear_ones_in_case_of_any_emergency"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/add_your_fav_location"
            android:textSize="15sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/addContactLt"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/you_can_add_up_to_5_contacts"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/addLocationLt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:background="@drawable/button_bg"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_new_address"
            android:textAllCaps="true"
            android:textColor="@color/primary_text"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>