<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/app_select_file"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_16"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/imageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/app_image"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/browseTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/app_browse"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/removeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/remove_photo"
        android:textColor="@color/black"
        android:textSize="@dimen/txtSize_16" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider" />

</LinearLayout>
