<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_LT"
        layout="@layout/toolbar_layout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_LT"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/txtDataLt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/let_s_make_travel_safer"
            android:textColor="@color/secondary_text"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:text="@string/alert_your_dear_ones_in_case_of_any_emergency"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/secondary_text"
            android:text="@string/add_them_to_your_emergency_contacts"
            android:textSize="15sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/addContactLt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/margin_15"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@drawable/button_bg"
        android:gravity="center"
        android:padding="@dimen/margin_15"
        android:text="@string/add_contacts"
        android:textColor="@color/white"
        android:textSize="@dimen/txtSize_14" />

</RelativeLayout>